--- a/webframe/src/main/webapp/coser/todomvc/index.html
+++ b/webframe/src/main/webapp/coser/todomvc/index.html
@@ -3,7 +3,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>在线任务列表</title>
 <meta charset="utf-8">
-<link rel="icon" href="http://static.seeidea.cn/common/img/icon.gif" type="image/gif" />
+<link rel="icon" href="http://static.seeidea.cn/img/icon.gif" type="image/gif" />
 <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 <script src="bower_components/todomvc-common/base.js"></script>
 </head>
