--- a/webframe/src/main/webapp/cdata/3drotate/index.html
+++ b/webframe/src/main/webapp/cdata/3drotate/index.html
@@ -3,10 +3,10 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>个人小站</title>
 
-<link rel="icon" href="http://static.seeidea.cn/common/img/icon.gif" type="image/gif" />
-<script type="text/javascript" src="http://static.seeidea.cn/module/js/modernizr.custom.71147.js"></script>
-<script type="text/javascript" src="http://static.seeidea.cn/common/js/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="http://static.seeidea.cn/build/js/buddycloud.js"></script>
+<link rel="icon" href="http://static.seeidea.cn/img/icon.gif" type="image/gif" />
+<script type="text/javascript" src="http://static.seeidea.cn/js/modernizr.custom.71147.js"></script>
+<script type="text/javascript" src="http://static.seeidea.cn/js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="http://static.seeidea.cn/js/buddycloud.js"></script>
 <script type="text/javascript">
 $(function(){
 	$(".buddycloud").buddycloud();
