--- a/webframe/src/main/webapp/markdown/index.html
+++ b/webframe/src/main/webapp/markdown/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="UTF-8" />
-    
+
     <title>在线markdown编辑器</title>
     <meta name="keywords" content="online markdown editor,markdown编辑器,在线编辑markdown" />
     <meta name="description" content="markdown在线编辑工具" />
     <link href="mymark.css?v=3" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="//static.seeidea.cn/common/img/icon.gif" type="image/gif" />
+    <link rel="shortcut icon" href="//static.seeidea.cn/img/icon.gif" type="image/gif" />
 </head>
 <body>
     <div class="mymark-container">
